src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_EntityReference.xaml


  <!ELEMENT Page (Button*)>
  <!ATTLIST Page xmlns CDATA #REQUIRED>
  <!ELEMENT Button (#PCDATA)>
  <!ENTITY writer "Donald Duck">
  <!ENTITY copyright "Copyright &writer;.">
  <!ENTITY  company    "Yoyodyne, Inc.">
  <!ENTITY   legal "All Rights Reserved.">
  <!ENTITY   signature   "&#xA9; 1999 &company; &legal;">

<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" >
  <Button></Button>
  <Button></Button>
</Page>
